Fixed body being too cramped

--- a/main.css
+++ b/main.css
@@ -18,7 +18,9 @@ body {
 
 
 /* issue 11 goes under here */
-
+body {
+  padding: 5%;
+}
 
 
 
